Punto2/gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "','", "':'", "'='", "'('", 
                     "')'", "'>'", "'<'", "'>='", "'<='", "'!='", "'CREATE'", 
                     "'READ'", "'UPDATE'", "'DELETE'", "'SET'", "'WHERE'", 
                     "'AND'", "'OR'", "'NOT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CREATE", "READ", "UPDATE", "DELETE", 
                      "SET", "WHERE", "AND", "OR", "NOT", "BOOLEANO", "CADENA", 
                      "NUMERO", "ID", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_create = 2
    RULE_read = 3
    RULE_update = 4
    RULE_delete = 5
    RULE_whereOpcional = 6
    RULE_documento = 7
    RULE_listaCampos = 8
    RULE_campo = 9
    RULE_asignaciones = 10
    RULE_asignacion = 11
    RULE_condicion = 12
    RULE_operador = 13
    RULE_valor = 14
    RULE_identificador = 15

    ruleNames =  [ "programa", "sentencia", "create", "read", "update", 
                   "delete", "whereOpcional", "documento", "listaCampos", 
                   "campo", "asignaciones", "asignacion", "condicion", "operador", 
                   "valor", "identificador" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    CREATE=13
    READ=14
    UPDATE=15
    DELETE=16
    SET=17
    WHERE=18
    AND=19
    OR=20
    NOT=21
    BOOLEANO=22
    CADENA=23
    NUMERO=24
    ID=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.SentenciaContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = gramaticaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0):
                self.state = 32
                self.sentencia()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create(self):
            return self.getTypedRuleContext(gramaticaParser.CreateContext,0)


        def read(self):
            return self.getTypedRuleContext(gramaticaParser.ReadContext,0)


        def update(self):
            return self.getTypedRuleContext(gramaticaParser.UpdateContext,0)


        def delete(self):
            return self.getTypedRuleContext(gramaticaParser.DeleteContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = gramaticaParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.create()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.read()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.update()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.delete()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(gramaticaParser.CREATE, 0)

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)


        def documento(self):
            return self.getTypedRuleContext(gramaticaParser.DocumentoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_create

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate" ):
                listener.enterCreate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate" ):
                listener.exitCreate(self)




    def create(self):

        localctx = gramaticaParser.CreateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(gramaticaParser.CREATE)
            self.state = 47
            self.identificador()
            self.state = 48
            self.documento()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(gramaticaParser.READ, 0)

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)


        def whereOpcional(self):
            return self.getTypedRuleContext(gramaticaParser.WhereOpcionalContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)




    def read(self):

        localctx = gramaticaParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(gramaticaParser.READ)
            self.state = 51
            self.identificador()
            self.state = 52
            self.whereOpcional()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(gramaticaParser.UPDATE, 0)

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)


        def SET(self):
            return self.getToken(gramaticaParser.SET, 0)

        def asignaciones(self):
            return self.getTypedRuleContext(gramaticaParser.AsignacionesContext,0)


        def whereOpcional(self):
            return self.getTypedRuleContext(gramaticaParser.WhereOpcionalContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate" ):
                listener.enterUpdate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate" ):
                listener.exitUpdate(self)




    def update(self):

        localctx = gramaticaParser.UpdateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_update)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(gramaticaParser.UPDATE)
            self.state = 55
            self.identificador()
            self.state = 56
            self.match(gramaticaParser.SET)
            self.state = 57
            self.asignaciones()
            self.state = 58
            self.whereOpcional()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(gramaticaParser.DELETE, 0)

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)


        def whereOpcional(self):
            return self.getTypedRuleContext(gramaticaParser.WhereOpcionalContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)




    def delete(self):

        localctx = gramaticaParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_delete)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(gramaticaParser.DELETE)
            self.state = 61
            self.identificador()
            self.state = 62
            self.whereOpcional()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereOpcionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(gramaticaParser.WHERE, 0)

        def condicion(self):
            return self.getTypedRuleContext(gramaticaParser.CondicionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_whereOpcional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereOpcional" ):
                listener.enterWhereOpcional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereOpcional" ):
                listener.exitWhereOpcional(self)




    def whereOpcional(self):

        localctx = gramaticaParser.WhereOpcionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whereOpcional)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(gramaticaParser.WHERE)
                self.state = 65
                self.condicion(0)
                pass
            elif token in [-1, 13, 14, 15, 16]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocumentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaCampos(self):
            return self.getTypedRuleContext(gramaticaParser.ListaCamposContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_documento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocumento" ):
                listener.enterDocumento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocumento" ):
                listener.exitDocumento(self)




    def documento(self):

        localctx = gramaticaParser.DocumentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_documento)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(gramaticaParser.T__0)
            self.state = 70
            self.listaCampos()
            self.state = 71
            self.match(gramaticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaCamposContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def campo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CampoContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CampoContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_listaCampos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaCampos" ):
                listener.enterListaCampos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaCampos" ):
                listener.exitListaCampos(self)




    def listaCampos(self):

        localctx = gramaticaParser.ListaCamposContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listaCampos)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.campo()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 74
                    self.match(gramaticaParser.T__2)
                    self.state = 75
                    self.campo()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CampoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)


        def valor(self):
            return self.getTypedRuleContext(gramaticaParser.ValorContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_campo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCampo" ):
                listener.enterCampo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCampo" ):
                listener.exitCampo(self)




    def campo(self):

        localctx = gramaticaParser.CampoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_campo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.identificador()
            self.state = 85
            self.match(gramaticaParser.T__3)
            self.state = 86
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.AsignacionContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_asignaciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignaciones" ):
                listener.enterAsignaciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignaciones" ):
                listener.exitAsignaciones(self)




    def asignaciones(self):

        localctx = gramaticaParser.AsignacionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_asignaciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.asignacion()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 89
                self.match(gramaticaParser.T__2)
                self.state = 90
                self.asignacion()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)


        def valor(self):
            return self.getTypedRuleContext(gramaticaParser.ValorContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = gramaticaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.identificador()
            self.state = 97
            self.match(gramaticaParser.T__4)
            self.state = 98
            self.valor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_condicion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CondSimpleContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identificador(self):
            return self.getTypedRuleContext(gramaticaParser.IdentificadorContext,0)

        def operador(self):
            return self.getTypedRuleContext(gramaticaParser.OperadorContext,0)

        def valor(self):
            return self.getTypedRuleContext(gramaticaParser.ValorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondSimple" ):
                listener.enterCondSimple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondSimple" ):
                listener.exitCondSimple(self)


    class CondAndContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CondicionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CondicionContext,i)

        def AND(self):
            return self.getToken(gramaticaParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondAnd" ):
                listener.enterCondAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondAnd" ):
                listener.exitCondAnd(self)


    class CondOrContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CondicionContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CondicionContext,i)

        def OR(self):
            return self.getToken(gramaticaParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondOr" ):
                listener.enterCondOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondOr" ):
                listener.exitCondOr(self)


    class CondAgrupadaContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self):
            return self.getTypedRuleContext(gramaticaParser.CondicionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondAgrupada" ):
                listener.enterCondAgrupada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondAgrupada" ):
                listener.exitCondAgrupada(self)


    class CondNotContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.CondicionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(gramaticaParser.NOT, 0)
        def condicion(self):
            return self.getTypedRuleContext(gramaticaParser.CondicionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondNot" ):
                listener.enterCondNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondNot" ):
                listener.exitCondNot(self)



    def condicion(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramaticaParser.CondicionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_condicion, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                localctx = gramaticaParser.CondNotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 101
                self.match(gramaticaParser.NOT)
                self.state = 102
                self.condicion(5)
                pass
            elif token in [25]:
                localctx = gramaticaParser.CondSimpleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.identificador()
                self.state = 104
                self.operador()
                self.state = 105
                self.valor()
                pass
            elif token in [6]:
                localctx = gramaticaParser.CondAgrupadaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.match(gramaticaParser.T__5)
                self.state = 108
                self.condicion(0)
                self.state = 109
                self.match(gramaticaParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 119
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = gramaticaParser.CondAndContext(self, gramaticaParser.CondicionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condicion)
                        self.state = 113
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 114
                        self.match(gramaticaParser.AND)
                        self.state = 115
                        self.condicion(5)
                        pass

                    elif la_ == 2:
                        localctx = gramaticaParser.CondOrContext(self, gramaticaParser.CondicionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condicion)
                        self.state = 116
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 117
                        self.match(gramaticaParser.OR)
                        self.state = 118
                        self.condicion(4)
                        pass

             
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_operador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperador" ):
                listener.enterOperador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperador" ):
                listener.exitOperador(self)




    def operador(self):

        localctx = gramaticaParser.OperadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_operador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7968) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(gramaticaParser.CADENA, 0)

        def NUMERO(self):
            return self.getToken(gramaticaParser.NUMERO, 0)

        def BOOLEANO(self):
            return self.getToken(gramaticaParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)




    def valor(self):

        localctx = gramaticaParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = gramaticaParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_identificador)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(gramaticaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[12] = self.condicion_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def condicion_sempred(self, localctx:CondicionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




